--- a/src/components/Introduction/Introduction.css
+++ b/src/components/Introduction/Introduction.css
@@ -27,7 +27,7 @@
     font-family: monospace;
 }
 
-#IntroductionSection
+#scrollSpyIntroduction
 {
   background-color: #4d4855;
   background-image: linear-gradient(170deg,#000000 30%,  #4d4855 90%);
